samples/_failures_safe/1760886667_1e6689_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_201d6464.c: In function ‘main’:
./samples/SAFE/__tmp_201d6464.c:145: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_201d6464.c:144:5: error: expected declaration or statement at end of input
  144 |     uint8_t decompressed_data[MAX_INPUT_SIZE
      |     ^~~~~~~
